@@ -1,6 +1,7 @@
 2004-03-16  Matthias Wimmer  <m@tthias.net>
 
     * conn.c: Added more SSL error logging
+    * connect.c: Added fd to connect log entry
 
 2004-01-17  Matthias Wimmer  <m@tthias.net>
 
